--- a/mvt1/mi_app/templates/mi_app/mis_datos.html
+++ b/mvt1/mi_app/templates/mi_app/mis_datos.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <ul>
-        {% for midato in datos_personales %}
-            <li> {{midato.nombre}} , {{midato.apellido}} ,{{midato.edad}} ,{{midato.telefono}},{{midato.email}} </li> 
+        {% for midate in datos_personales %}
+            <li> {{midate.nombre}} , {{midate.apellido}} ,{{midate.edad}} ,{{midate.telefono}},{{midate.email}} </li> 
         {% endfor %}
     </ul>
 
