--- a/mvt1/mi_app/templates/mi_app/mis_mascotas.html
+++ b/mvt1/mi_app/templates/mi_app/mis_mascotas.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <ul>
-        {% for mimascota in mascotas %}
-            <li> {{mimascota.nombre}} , {{mimascota.raza}} ,{{mimascota.edad}} </li> 
+        {% for mascota in mascotas %}
+            <li> {{mascota.nombre}} , {{mascota.raza}} ,{{mascota.edad}} </li> 
         {% endfor %}
     </ul>
 
 </body>
 
-{%extends 'base.html'%}
+</html>
