--- a/mvt1/mi_app/templates/mi_app/mis_mascotas.html
+++ b/mvt1/mi_app/templates/mi_app/mis_mascotas.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MiWEB</title>
 </head>
 <body>
+    <h1> Mis Mascotas son Tambien Mis Hijos: </h1>
     <ul>
         {% for mascota in mascotas %}
             <li> {{mascota.nombre}} , {{mascota.raza}} ,{{mascota.edad}} </li> 
         {% endfor %}
     </ul>
-
+    <p> No miento son mis hijos Tambien </p>
 </body>
 
 </html>
