--- a/mvt1/mi_app/templates/mi_app/mis_datos.html
+++ b/mvt1/mi_app/templates/mi_app/mis_datos.html
@@ -14,7 +14,12 @@
             <li> {{mi_dato.nombre}} , {{mi_dato.apellido}} ,{{mi_dato.edad}} , {{mi_dato.telefono}} ,{{mi_dato.email}}</li> 
         {% endfor %}
     </ul>
+    <hr>
     <p> Para mas Datos envia un mensaje de  WhatsApp </p>
+    <br>
+    <hr>
+    <h3> Regresar a el indice de Mis paginas </h3> <a href="http://127.0.0.1:8000/"> ir </a>
+    
 </body>
 
 </html>
