--- a/mvt1/mi_app/templates/mi_app/mis_mascotas.html
+++ b/mvt1/mi_app/templates/mi_app/mis_mascotas.html
@@ -7,13 +7,18 @@
     <title>MiWEB</title>
 </head>
 <body>
-    <h1> Mis Mascotas son Tambien Mis Hijos: </h1>
+    <h1> MI Familia Interespecie: </h1>
     <ul>
         {% for mascota in mascotas %}
             <li> {{mascota.nombre}} , {{mascota.raza}} ,{{mascota.edad}} </li> 
         {% endfor %}
     </ul>
-    <p> No miento son mis hijos Tambien </p>
+    <hr>
+    <p> Por mucho que nos queramos quedar en el pasado, el mundo sigue y todo cambia.</p>
+    <p> La sociedad ha avanzado tanto que ahora tenemos muchos tipos de familias.</p>
+    <p> No miento son mis hijos Tambien! </p>
+    <hr>
+    <h3> Regresar a el indice de Mis paginas </h3> <a href="http://127.0.0.1:8000/"> ir </a>
 </body>
 
 </html>
