--- a/mvt1/mi_app/templates/mi_app/mis_parientes.html
+++ b/mvt1/mi_app/templates/mi_app/mis_parientes.html
@@ -13,7 +13,10 @@
             <li> {{pariente.nombre}} , {{pariente.apellido}} ,{{pariente.edad}} ,{{pariente.parentezco}} </li> 
         {% endfor %}
     </ul>
+    <hr>
     <p> Ellos son mi tesoro mas Preciado </p>
+    <hr>
+    <h3> Regresar a el indice de Mis paginas </h3> <a href="http://127.0.0.1:8000/"> ir </a>
 </body>
 
 </html>
