--- a/mvt1/mi_app/templates/mi_app/mis_datos.html
+++ b/mvt1/mi_app/templates/mi_app/mis_datos.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1> Mis Datos Personales: </h1>
+    <img src="https://lh3.googleusercontent.com/a-/AOh14GhMydye-7OsWvUokf5ZuqvloVtQVhGWbvMy3ras02M=s96-c-rg-br100" />
     <ul>
         {% for mi_dato in mis_datos %}
             <li> {{mi_dato.nombre}} , {{mi_dato.apellido}} ,{{mi_dato.edad}} , {{mi_dato.telefono}} ,{{mi_dato.email}}</li> 
@@ -18,7 +19,7 @@
     <p> Para mas Datos envia un mensaje de  WhatsApp </p>
     <br>
     <hr>
-    <h3> Regresar a el indice de Mis paginas </h3> <a href="http://127.0.0.1:8000/"> ir </a>
+    <h3> Abre el indice de Mis Paginas </h3> <a targuet="blank"  href="http://127.0.0.1:8000/"> ir </a>
     
 </body>
 
