--- a/mvt1/mi_app/templates/mi_app/mis_mascotas.html
+++ b/mvt1/mi_app/templates/mi_app/mis_mascotas.html
@@ -18,7 +18,9 @@
     <p> La sociedad ha avanzado tanto que ahora tenemos muchos tipos de familias.</p>
     <p> No miento son mis hijos Tambien! </p>
     <hr>
-    <h3> Regresar a el indice de Mis paginas </h3> <a href="http://127.0.0.1:8000/"> ir </a>
+    <img src="https://images-na.ssl-images-amazon.com/images/I/61IKODPiVnL.__AC_SX300_SY300_QL70_FMwebp_.jpg" />
+    <hr>
+    <h3> Abre el indice de Mis paginas en otra Pestaña</h3> <a targuet="blank"  href="http://127.0.0.1:8000/"> ir </a>
 </body>
 
 </html>
