--- a/mvt1/mi_app/templates/mi_app/mis_parientes.html
+++ b/mvt1/mi_app/templates/mi_app/mis_parientes.html
@@ -7,6 +7,7 @@
     <title>MiWEB</title>
 </head>
 <body>
+    <img src="https://www.vaticannews.va/content/dam/vaticannews/multimedia/2021/08/05/familiaAEM.jpg/_jcr_content/renditions/cq5dam.thumbnail.cropped.750.422.jpeg" />
     <h1> Esta es MI FAMILIA: </h1>
     <ul>
         {% for pariente in parientes %}
@@ -16,7 +17,7 @@
     <hr>
     <p> Ellos son mi tesoro mas Preciado </p>
     <hr>
-    <h3> Regresar a el indice de Mis paginas </h3> <a href="http://127.0.0.1:8000/"> ir </a>
+    <h3> Abre el indice de Mis paginas en otra Pestaña</h3> <a targuet="blank"  href="http://127.0.0.1:8000/"> ir </a>
 </body>
 
 </html>
