--- a/mvt1/mi_app/templates/mi_app/mis_parientes.html
+++ b/mvt1/mi_app/templates/mi_app/mis_parientes.html
@@ -7,7 +7,7 @@
     <title>MiWEB</title>
 </head>
 <body>
-    <img src="https://www.vaticannews.va/content/dam/vaticannews/multimedia/2021/08/05/familiaAEM.jpg/_jcr_content/renditions/cq5dam.thumbnail.cropped.750.422.jpeg" />
+    <img src="https://www.vaticannews.va/content/dam/vaticannews/multimedia/2021/08/05/familiaAEM.jpg/_jcr_content/renditions/cq5dam.thumbnail.cropped.750.422.jpeg" width="300" />
     <h1> Esta es MI FAMILIA: </h1>
     <ul>
         {% for pariente in parientes %}
